--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "moment": "^2.24.0",
     "mysql2": "^1.6.5",
     "randomstring": "^1.1.5",
+    "request": "^2.88.0",
+    "request-promise": "^4.2.4",
     "sequelize": "^5.2.8",
     "sha256": "^0.2.0"
   },
