--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "cookie-parse": "^0.4.0",
     "eventproxy": "^1.0.0",
     "formidable": "^1.2.1",
+    "ioredis": "^4.9.0",
     "koa": "^2.7.0",
     "koa-bodyparser": "^4.2.1",
     "koa-multer": "^1.0.2",
@@ -15,6 +16,7 @@
     "koa-send": "^5.0.0",
     "moment": "^2.24.0",
     "mysql2": "^1.6.5",
+    "qiniu": "^7.2.1",
     "randomstring": "^1.1.5",
     "request": "^2.88.0",
     "request-promise": "^4.2.4",
