--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "request": "^2.88.0",
     "request-promise": "^4.2.4",
     "sequelize": "^5.2.8",
-    "sha256": "^0.2.0"
+    "sha256": "^0.2.0",
+    "ws": "^6.2.1"
   },
   "devDependencies": {
     "nodemon": "^1.18.10"
