--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "bluebird": "^3.5.3",
     "cookie-parse": "^0.4.0",
     "eventproxy": "^1.0.0",
+    "exceljs": "^1.15.0",
     "formidable": "^1.2.1",
     "ioredis": "^4.9.0",
     "koa": "^2.7.0",
